--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -811,6 +811,7 @@ body {
 }
 
 .grid-item__top {
+  text-align: left;
   margin-bottom: 8px;
   font-weight: 600;
   font-size: 16px;
@@ -825,6 +826,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-height: 22px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .grid-item__top span {
@@ -849,6 +853,9 @@ body {
   color: #000000;
   text-align: left;
   margin-bottom: 19px;
+  max-height: 34px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .grid-item__price {
@@ -858,6 +865,9 @@ body {
   line-height: 140%;
   text-align: center;
   color: #121146;
+  max-height: 33px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media (max-width: 767.98px) {
@@ -867,11 +877,7 @@ body {
 }
 
 .grid-item__bag {
-  position: absolute;
-  bottom: -30px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  margin: 0 auto;
   border: 2px solid #eceef6;
   border-radius: 50%;
   width: 33px;
